Fix Qodana warnings